@@ -26,6 +26,8 @@
   * new: SailfishOS port;
   * new: WinRT patches for upcoming port;
   * new: sprite.scr() returns background in non direct mode;
+  * new: sprite.render_callback() (yahoooo!);
+  * new: instead.wait_use();
 
  -- Peter Kosyh <p.kosyh@gmail.com>  Sun, 14 Jan 2018 16:54:00 +0300
 
